# converge.zone

./: .cursorrules  .env.example  .envrc  .gitignore  AGENTS.md  BUSINESS_STORYTELLING.md  Dockerfile  LICENSE  PARTNERSHIPS.md  README.md  REFACTORY_FACTS.md  STORYTELLING.md  docker-compose.yml  flake.nix  justfile
.githooks/: pre-push
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0.0-REQUIREMENTS.md  v1.0.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
converge-knowledge/: AGENTS.md  Cargo.toml  README.md  build.rs  justfile
converge-knowledge/.claude/agents/: apple-notes-export-specialist.md  audio-processing-specialist.md  multimodal-embeddings-specialist.md  phase-2-apple-ecosystem-coordinator.md  phase-3-rich-media-coordinator.md  photos-text-extraction-specialist.md  screenshots-ocr-specialist.md  video-transcription-specialist.md
converge-knowledge/benches/: vector_search.rs
converge-knowledge/docs/: ARCHITECTURE.md  DESIGN_INPUT_SOURCES.md  VISION.md
converge-knowledge/examples/: apple_vision_ocr_smoke.rs  ocr_compare_smoke.rs  tesseract_ocr_smoke.rs
converge-knowledge/proto/: knowledge.proto
converge-knowledge/src/: error.rs  lib.rs  main.rs
converge-knowledge/src/agentic/: causal.rs  meta.rs  mod.rs  online.rs  reflexion.rs  sessions.rs  skills.rs  temporal.rs
converge-knowledge/src/core/: entry.rs  knowledge_base.rs  mod.rs  search.rs
converge-knowledge/src/embedding/: mod.rs  openai.rs
converge-knowledge/src/grpc/: client.rs  converge.knowledge.v1.rs  mod.rs  server.rs
converge-knowledge/src/ingest/: markdown.rs  mod.rs  multimodal.rs  ocr.rs  pdf.rs  photos.rs  rich_media.rs  routing.rs  screenshots.rs  source.rs
converge-knowledge/src/learning/: batch.rs  feedback.rs  gnn.rs  mod.rs  replay.rs
converge-knowledge/src/mcp/: handlers.rs  mod.rs  server.rs  types.rs
converge-knowledge/src/storage/: mod.rs
converge-optimization/: Cargo.toml  JOBS.md
converge-optimization/.github/workflows/: ci.yml
converge-optimization/.planning/: OR-TOOLS-ALGORITHMS-GUIDE.md  RUST-REIMPLEMENTATION-ANALYSIS.md
converge-optimization/.planning/baseline-tests/: TEST-INVENTORY.md  cpsat-basic.txt
converge-optimization/.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
converge-optimization/benches/: assignment.rs  cp_comparison.rs  graph.rs
converge-optimization/examples/: cp_compare.rs
converge-optimization/ortools-sys/: Cargo.toml  README.md  build.rs  wrapper.cc  wrapper.h
converge-optimization/ortools-sys/src/: lib.rs
converge-optimization/scripts/: check-duplicate-modules.sh  check-purity.sh
converge-optimization/src/: error.rs  lib.rs  types.rs
converge-optimization/src/assignment/: auction.rs  hungarian.rs  mod.rs
converge-optimization/src/cp/: mod.rs  solver.rs
converge-optimization/src/gate/: budgets.rs  constraints.rs  decision.rs  determinism.rs  mod.rs  provenance.rs  report.rs  types.rs
converge-optimization/src/graph/: dijkstra.rs  flow.rs  matching.rs  mod.rs
converge-optimization/src/knapsack/: mod.rs
converge-optimization/src/packs/: mod.rs  registry.rs  testing.rs  traits.rs
converge-optimization/src/packs/anomaly_triage/: invariants.rs  mod.rs  solver.rs  types.rs
converge-optimization/src/packs/backlog_prioritization/: invariants.rs  mod.rs  solver.rs  types.rs
converge-optimization/src/packs/budget_allocation/: invariants.rs  mod.rs  solver.rs  types.rs
converge-optimization/src/packs/capacity_planning/: invariants.rs  mod.rs  solver.rs  types.rs
converge-optimization/src/packs/inventory_rebalancing/: invariants.rs  mod.rs  solver.rs  types.rs
converge-optimization/src/packs/inventory_replenishment/: invariants.rs  mod.rs  solver.rs  types.rs
converge-optimization/src/packs/lead_routing/: invariants.rs  mod.rs  solver.rs  types.rs
converge-optimization/src/packs/meeting_scheduler/: invariants.rs  mod.rs  solver.rs  types.rs
converge-optimization/src/packs/pricing_guardrails/: invariants.rs  mod.rs  solver.rs  types.rs
converge-optimization/src/packs/shipping_choice/: invariants.rs  mod.rs  solver.rs  types.rs
converge-optimization/src/packs/vendor_shortlist/: invariants.rs  mod.rs  solver.rs  types.rs
converge-optimization/src/provider/: mod.rs
converge-optimization/src/scheduling/: mod.rs
converge-optimization/src/setcover/: mod.rs
converge-policy/: Dockerfile  README.md  docker-compose.yml
converge-policy/doc/: ARCHITECTURE.md
converge-policy/opa/: policy.rego
converge-policy/rust-pdp-cedar/: Cargo.toml
doc/: ARCHITECTURE.md
rust-pdp-cedar/: Cargo.toml
rust-pdp-cedar/src/: main.rs
sample/: capability_flow.sh  curl.sh
(+73 files in other folders)
