[workspace]
resolver = "2"
members = [
    ".",
    "ortools-sys",
]

[package]
name = "converge-optimization"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Optimization algorithms for converge.zone - Rust reimplementation of OR-Tools subset"
license = "Apache-2.0"
repository = "https://github.com/converge-zone/converge-optimization"
keywords = ["optimization", "constraint-programming", "graph", "scheduling", "assignment"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
# Core
thiserror = "2"
tracing = "0.1"

# Data structures
petgraph = "0.7"
indexmap = "2"
smallvec = "1.13"
bitvec = "1"

# Numeric
num-traits = "0.2"
ordered-float = "4"

# Parallelism
rayon = "1.10"

# Serialization (for problem/solution I/O)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Optional: FFI to C++ OR-Tools
ortools-sys = { path = "ortools-sys", optional = true, features = ["link"] }

# SAT solver for native CP
varisat = { version = "0.2", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
rand = "0.8"
approx = "0.5"

[features]
default = []
ffi = ["dep:ortools-sys"]
sat = ["dep:varisat"]
full = ["ffi", "sat"]

[[bench]]
name = "assignment"
harness = false

[[bench]]
name = "graph"
harness = false

[[bench]]
name = "cp_comparison"
harness = false
required-features = ["sat", "ffi"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
lto = true
codegen-units = 1
