[package]
name = "pdp-cedar"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
cedar-policy = "2.4"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"


# Added for Redis CEP and capability tokens
redis = { version = "0.25", features = ["tokio-comp"] }
ed25519-dalek = "2"
rand = "0.8"
ciborium = "0.2"
base64 = "0.22"
time = { version = "0.3", features = ["formatting", "macros"] }
