[package]
name = "ortools-sys"
version = "0.1.0"
edition = "2021"
description = "FFI bindings to Google OR-Tools C++ library"
license = "Apache-2.0"
build = "build.rs"

[features]
default = []
# Enable linking against OR-Tools C++ library
# Requires OR-Tools to be built and available
link = []

[dependencies]

[build-dependencies]
cc = "1"
pkg-config = "0.3"
